# my_sae

./: .gitattributes  .gitignore  LLM_GENERATION_IMPROVEMENTS.md  QUANTIZATION_LIMITATIONS.md  QUANTIZATION_README.md  README.md  README_COLAB_IMPROVEMENTS.md  README_label_intervention.md  README_label_sycophancy.md  SETUP_SUMMARY.md  activation_utils.py  config.py  debug_llm_generation.py  demo_sae_train.py  demo_sbert.ipynb  demo_train_sae_gpt.py  env_config.py  experiment_config.py  label_sycophancy.py  launcher_colab.ipynb  memory_optimizer.py  memory_test.py  pyproject.toml  quick_sycophancy_test.py  requirements-colab.txt  requirements-server-flash.txt  requirements-server.txt  requirements.txt  run_sae_training.py  sae_are_you_sure_analysis.ipynb  sae_lens.ipynb  sae_model.py  sae_sycophancy_analysis_clean.ipynb  sae_sycophancy_hybrid.py  sae_sycophancy_improved.py  sae_test_light.py  sae_trainer.py  sae_visualization.py  saelens.py  sample.ipynb  (+17 more)
.github/: copilot-instructions.md
results/: analysis_summary.json  experiment_config.json
