[project]
name = "sae-try"
version = "0.1.0"
description = ""
authors = [
    {name = "Itsuki Kuwahara",email = "248c117c@stu.kobe-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "japanize-matplotlib (>=1.1.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lxml (>=4.9,<5.0)",
    "sae-lens (>=5.10.7,<6.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    {package = "torch", version = "^2.3.1", source = "pytorch_cu121"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"