[tool.poetry]
name = "sae-try"
version = "0.1.0"
description = "SAE-based LLM Sycophancy Analysis for Local and Server Environments"
authors = ["Itsuki Kuwahara <248c117c@stu.kobe-u.ac.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# --- サーバーで必須のライブラリ (本番環境) ---
python = ">=3.11,<4.0"

# Core ML/DL libraries
torch = ">=2.0.0"
transformers = ">=4.35.0,<5.0.0"
accelerate = ">=0.24.0"
safetensors = ">=0.4.0"

# SAE and analysis libraries  
"sae-lens" = ">=3.0.0"
einops = ">=0.7.0"
jaxtyping = ">=0.2.0"

# Data processing (必須)
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.24.0,<2.0.0"
datasets = ">=2.14.0"

# Core utilities (必須)
tqdm = ">=4.65.0,<5.0.0"
requests = ">=2.31.0"

# Enhanced functionality (サーバーでも使用可能)
sentence-transformers = ">=2.2.0"
scikit-learn = ">=1.3.0"

# 分析に必須のプロット機能 (サーバーでも必要)
plotly = ">=5.17.0"
bitsandbytes = {version = "^0.47.0", platform = "linux"}
google-genai = "^1.49.0"
openai = "^2.7.1"
scipy = "^1.16.3"
statsmodels = "^0.14.6"

[tool.poetry.group.server.dependencies]
# --- サーバー環境専用ライブラリ ---
# メモリ効率化のためのflash attention (Linux/CUDA環境専用)
# 注意: flash-attnはPyTorchに依存するため、手動インストールが必要
# flash-attn = ">=2.0.0"  # コメントアウト - 手動インストール推奨

[tool.poetry.group.dev.dependencies]
# --- ローカルでの開発・分析・デバッグでのみ使うライブラリ ---

# Advanced visualization libraries (ローカル分析用)
matplotlib = ">=3.7.0,<4.0.0"
seaborn = ">=0.12.0,<0.14.0"
japanize-matplotlib = {version = ">=1.1.3,<2.0.0", markers = "sys_platform == 'darwin'"}

# Jupyter Notebook support (ローカル開発用)
ipykernel = ">=6.25.0,<7.0.0"
notebook = ">=7.0.0"
nbformat = ">=5.8.0,<6.0.0"
ipywidgets = ">=8.0.0"

# Development and testing tools
pytest = ">=7.4.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.5.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"